--- a/index.html
+++ b/index.html
@@ -33,9 +33,6 @@
 
   
   <body>
-    <!-- <h1>Hello, world!</h1>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-   -->
 
    <br>
    <br>
@@ -119,6 +116,10 @@
       <div class="tab-pane fade show active" id="all">
         <!-- Content for All Projects -->
         <p>All projects will be displayed here.</p>
+
+        <div id="project-container-0" class="container-sm project"></div>
+        <div id="project-container-1" class="container-sm project"></div>
+
       </div>
       <div class="tab-pane fade" id="cs">
         <!-- Content for Computer Science Projects -->
@@ -140,8 +141,19 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
 
    
-
     
+    <script src="https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
+    <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin></script>
+    <script src="https://unpkg.com/prop-types@15.7.2/prop-types.min.js" crossorigin></script>
+
+
+    <script type="module" src="./src/ProjectComponent.js"></script>
+
+    <script type="module">
+      import ProjectComponent from './src/ProjectComponent.js';
+
+      ProjectComponent();
+    </script>
   
   </body>
 
