added new projects

--- a/index.html
+++ b/index.html
@@ -119,6 +119,9 @@
 
         <div id="project-container-0" class="container-sm project"></div>
         <div id="project-container-1" class="container-sm project"></div>
+        <div id="project-container-2" class="container-sm project"></div>
+        <div id="project-container-3" class="container-sm project"></div>
+        <div id="project-container-4" class="container-sm project"></div>
 
       </div>
       <div class="tab-pane fade" id="cs">
