added music, bug workaround for project panels

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Raymond's website!</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="stylesheet.css">
   </head>
@@ -101,9 +101,6 @@
     <!-- Nav tabs -->
     <ul class="nav nav-tabs">
       <li class="nav-item">
-        <a class="nav-link active" id="all-tab" data-bs-toggle="tab" href="#all">All Projects</a>
-      </li>
-      <li class="nav-item">
         <a class="nav-link" id="cs-tab" data-bs-toggle="tab" href="#cs">CS</a>
       </li>
       <li class="nav-item">
@@ -116,33 +113,39 @@
 
     <!-- Tab panes -->
     <div class="tab-content mt-2">
-      <div class="tab-pane fade show active" id="all">
-        <!-- Content for All Projects -->
-        <p>see all my projects!</p>
-
-        <div id="project-container-0" class="container-sm project"></div>
-        <div id="project-container-1" class="container-sm project"></div>
-        <div id="project-container-2" class="container-sm project"></div>
-        <div id="project-container-3" class="container-sm project"></div>
-        <div id="project-container-4" class="container-sm project"></div>
-        <div id="project-container-5" class="container-sm project"></div>
-        <div id="project-container-6" class="container-sm project"></div>
-
-      </div>
-      <div class="tab-pane fade" id="cs">
+      <div class="tab-pane fade show active" id="cs">
         <!-- Content for Computer Science Projects -->
         <p>my software projects!</p>
 
         <div id="project-container-1" class="container-sm project"></div>
         <div id="project-container-2" class="container-sm project"></div>
         <div id="project-container-3" class="container-sm project"></div>
+        <div id="project-container-4" class="container-sm project"></div>
 
       </div>
       <div class="tab-pane fade" id="music">
         <!-- Content for Music Tech Projects -->
         <p>my music projects!</p>
 
-        <div id="project-container-4" class="container-sm project"></div>
+        <p>it's late, it's night, i can't sleep, but this is good</p>
+        <audio src="../Audio/its late, its night, i cant sleep, but this is good.mp3" controls>
+        </audio>
+        <br>
+
+        <p>falling</p>
+        <audio src="../Audio/falling.mp3" controls>
+        </audio>
+        <br>
+
+        <p>12/10/23</p>
+        <audio src="../Audio/12_10_23.mp3" controls>
+        </audio>
+        <br>
+
+        <p>8/19/23</p>
+        <audio src="../Audio/8_19_23 mix 3:18.mp3" controls>
+        </audio>
+        <br>
 
       </div>
       <div class="tab-pane fade" id="game">
@@ -156,6 +159,7 @@
       </div>
     </div>
   </div>
+  
 
     <!-- Include Bootstrap JS (both Popper.js and Bootstrap JS) -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
