add animation project, fix games resume

--- a/index.html
+++ b/index.html
@@ -52,8 +52,12 @@
           welcome to my website!
         </p>
         <a class="link-opacity-100 link-opacity-50-hover" href="https://github.com/thereare21">github</a>
+        <br>
         <a class="link-opacity-100 link-opacity-50-hover" href="https://www.linkedin.com/in/raymond-tsai-986a05217/">linkedin</a>
-        <a class="link-opacity-100 link-opacity-50-hover" href="Raymond Tsai Resume-7.pdf">resume</a>
+        <br>
+        <a class="link-opacity-100 link-opacity-50-hover" href="RaymondTsaiResume.pdf">software resume</a>
+        <br>
+        <a class="link-opacity-100 link-opacity-50-hover" href="Raymond Tsai Games Resume.pdf"> games resume</a>
       </div>
 
       <div id="contact" class="col">
@@ -101,7 +105,7 @@
     <!-- Nav tabs -->
     <ul class="nav nav-tabs">
       <li class="nav-item">
-        <a class="nav-link" id="cs-tab" data-bs-toggle="tab" href="#cs">CS</a>
+        <a class="nav-link active" id="cs-tab" data-bs-toggle="tab" href="#cs">CS</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" id="music-tab" data-bs-toggle="tab" href="#music">Music</a>
@@ -117,15 +121,17 @@
         <!-- Content for Computer Science Projects -->
         <p>my software projects!</p>
 
-        <div id="project-container-1" class="container-sm project"></div>
-        <div id="project-container-2" class="container-sm project"></div>
-        <div id="project-container-3" class="container-sm project"></div>
-        <div id="project-container-4" class="container-sm project"></div>
+        <div id="project-container-1" ></div>
+        <div id="project-container-2" ></div>
+        <div id="project-container-3" ></div>
+        <div id="project-container-4" ></div>
 
       </div>
       <div class="tab-pane fade" id="music">
         <!-- Content for Music Tech Projects -->
         <p>my music projects!</p>
+
+        <div id="project-container-7"></div>
 
         <p>it's late, it's night, i can't sleep, but this is good</p>
         <audio src="../Audio/its late, its night, i cant sleep, but this is good.mp3" controls>
@@ -152,9 +158,9 @@
         <!-- Content for Game Programming Projects -->
         <p>my games!</p>
         
-        <div id="project-container-0" class="container-sm project"></div>
-        <div id="project-container-5" class="container-sm project"></div>
-        <div id="project-container-6" class="container-sm project"></div>
+        <div id="project-container-0" ></div>
+        <div id="project-container-5" ></div>
+        <div id="project-container-6" ></div>
 
       </div>
     </div>
