import video animation

--- a/index.html
+++ b/index.html
@@ -36,10 +36,11 @@
 
   <div class="spacer"></div>
 
-   <div class="container-sm scroll-fade">
+   <div id="profile" class="container-sm scroll-fade">
 
-    <div class="row">
+    <img class="video-background" src="Images/website-animation-720p.mov"></img>
 
+    <div class="profile-content">
       <div class="row">
         <div id="name" class="col">
           <h1 class="text-center text-1">Raymond Tsai</h1>
