cleaning up project text

--- a/index.html
+++ b/index.html
@@ -109,8 +109,6 @@
   <div id="projects" class="container project-container tab-content mt-2 scroll-fade">
     <div class="tab-pane fade show active" id="cs">
       <!-- Content for Computer Science Projects -->
-      <p>my software projects!</p>
-
       <div id="project-card-1" ></div>
       <div id="project-card-2" ></div>
       <div id="project-card-3" ></div>
@@ -119,35 +117,31 @@
     </div>
     <div class="tab-pane fade" id="music">
       <!-- Content for Music Tech Projects -->
-      <p>my music projects!</p>
-
       <div id="project-card-7"></div>
 
-      <p>it's late, it's night, i can't sleep, but this is good</p>
+      <p class="text-1">it's late, it's night, i can't sleep, but this is good</p>
       <audio src="../Audio/its late, its night, i cant sleep, but this is good.mp3" controls>
       </audio>
       <br>
 
-      <p>falling</p>
+      <p class="text-1">falling</p>
       <audio src="../Audio/falling.mp3" controls>
       </audio>
       <br>
 
-      <p>12/10/23</p>
+      <p class="text-1">12/10/23</p>
       <audio src="../Audio/12_10_23.mp3" controls>
       </audio>
       <br>
 
-      <p>8/19/23</p>
+      <p class="text-1">8/19/23</p>
       <audio src="../Audio/8_19_23 mix 3:18.mp3" controls>
       </audio>
       <br>
 
     </div>
     <div class="tab-pane fade" id="game">
-      <!-- Content for Game Programming Projects -->
-      <p>my games!</p>
-      
+      <!-- Content for Game Programming Projects -->      
       <div id="project-card-0" ></div>
       <div id="project-card-5" ></div>
       <div id="project-card-6" ></div>
