add creepy crawl project, blurb on solo dev proj

--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
         <a class="col link-opacity-100 link-opacity-50-hover" href="src/RaymondTsaiResume.pdf">cs resume</a>
         <a class="col link-opacity-100 link-opacity-50-hover" href="src/Raymond Tsai Games Resume.pdf"> games resume</a>
       </div>
+      <div id="rob-link" class="row" style="padding:30px 25%;align-items: center;">
+        <a class="col link-opacity-100 link-opacity-50-hover" href="./projects/rob">a solo dev experience i had</a>
+      </div>
 
     </div>
 
@@ -73,8 +76,10 @@
       <br><br>I first started programming games and animations on Scratch when I was in middle school. Ever since, I've fallen in love with the art of programming. 
       In high school, I created a CI/CD pipeline as part of my internship at Boeing, and I was also the software lead for my high school's FRC Team, where we placed semifinals in the L.A Regional 2022.
 
-      <br><br> At NEU, I've continued to pursue all sorts of projects from game design to coding projects to music compositions, even some 3D modeling too (check out my projects below!) 
-      I've participated in ~10 game jams and 2 long term projects as a part of the Game Studio Club. I've also done frontend and backend development for NEU's Electric Racing Team, and have created various projects in C++ and Java.
+      <br><br> At NEU, I've continued to pursue my curiosity to the fullest extent. I've participated in ~10 game jams and 2 long term projects as a part of the Game Studio Club. I've also done frontend 
+      and backend development for NEU's Electric Racing Team, and have created various projects in C++, Java, and JavaScript.
+
+      <br><br> Outside of programming, I am also a prolific music producer and composer, who has contributed over 15 pieces spanning electronic, ambient, and classical to games and other media here at NEU.
       
       <br><br> I love to explore the intersection between coding and art, specifically the use of programming to generate ever-changing sonic and visual landscapes. As a long term goal, I want to combine my
       interests in game design, programming, and music together to create a unique form of expression.
@@ -117,32 +122,37 @@
     </div>
     <div class="tab-pane fade" id="music">
       <!-- Content for Music Tech Projects -->
+
+      <div class="row">
+        <p class="text-1">it's late, it's night, i can't sleep, but this is good</p>
+        <audio src="../Audio/its late, its night, i cant sleep, but this is good.mp3" controls>
+        </audio>
+        <br>
+  
+        <p class="text-1">falling</p>
+        <audio src="../Audio/falling.mp3" controls>
+        </audio>
+        <br>
+  
+        <p class="text-1">12/10/23</p>
+        <audio src="../Audio/12_10_23.mp3" controls>
+        </audio>
+        <br>
+  
+        <p class="text-1">8/19/23</p>
+        <audio src="../Audio/8_19_23 mix 3:18.mp3" controls>
+        </audio>
+        <br>
+      </div>
+
       <div id="project-card-7"></div>
 
-      <p class="text-1">it's late, it's night, i can't sleep, but this is good</p>
-      <audio src="../Audio/its late, its night, i cant sleep, but this is good.mp3" controls>
-      </audio>
-      <br>
-
-      <p class="text-1">falling</p>
-      <audio src="../Audio/falling.mp3" controls>
-      </audio>
-      <br>
-
-      <p class="text-1">12/10/23</p>
-      <audio src="../Audio/12_10_23.mp3" controls>
-      </audio>
-      <br>
-
-      <p class="text-1">8/19/23</p>
-      <audio src="../Audio/8_19_23 mix 3:18.mp3" controls>
-      </audio>
-      <br>
-
+      
     </div>
     <div class="tab-pane fade" id="game">
       <!-- Content for Game Programming Projects -->      
       <div id="project-card-0" ></div>
+      <div id="project-card-8"></div>
       <div id="project-card-5" ></div>
       <div id="project-card-6" ></div>
 
